@@ -1,5 +1,7 @@
 2003-05-30  Bradley Bell  <btb@icculus.org>
 
+	* main/state.c: improve savegame load/save
+
 	* main/movie.c: make -nomovies friendlier
 
 	* 2d/pcx.c, include/physfsx.h: use physfs for writing pcx files
